# remusys-lang

./: Cargo.toml  LICENSE  README.md
resource/: grammar.lalrpop  regenerate_parser.sh  stdlib.syi
src/: grammar.lalrpop  grammar.rs  lib.rs  parser.rs  typing.rs
src/ast/: decl.rs  expr.rs  mod.rs  operator.rs  print.rs
src/ast/attr/: mod.rs
src/ast/expr/: binop.rs  call.rs  ident.rs  index.rs  initlist.rs  literal.rs  mod.rs  normalize.rs  unaryop.rs
src/ast/print/: mod.rs
src/ast/stmt/: block.rs  decl.rs  ifstmt.rs  mod.rs  whilestmt.rs
src/normalize/: expr.rs  expr_norecurse.rs  mod.rs  scope.rs
src/util/: initlist_expand.rs  mod.rs
